- Eliminar part del enunciat duplicat

--- a/proyecto_team.ipynb
+++ b/proyecto_team.ipynb
@@ -229,122 +229,7 @@
     "   - **Uso de Datos:** Usa las columnas `AveragePrice` y `Total Volume`.\n",
     "   - **Esperado:** Examina cómo las variaciones en `AveragePrice` afectan a `Total Volume`.\n",
     "     - Realiza un análisis de la relación entre estas dos variables calculando la elasticidad.\n",
-    "     - Presenta un gráfico de dispersión que muestre la relación y discute la tendencia observada utilizando `plt.scatter()` y `plt.plot()`.\n",
-    "\n",
-    "### 4. **Análisis de Cohortes**\n",
-    "**Resumen:** El análisis de cohortes permite agrupar datos según características específicas y observar cómo se comportan a lo largo del tiempo. Se centra en cohortes de precios y ventas para entender las dinámicas del mercado.\n",
-    "\n",
-    "1. **Cohortes Basadas en Precios Promedios Trimestrales:**\n",
-    "   - **Uso de Datos:** Usa las columnas `AveragePrice`, `Total Volume` y `Date`.\n",
-    "   - **Esperado:** Crea cohortes trimestrales y analiza cambios en precios y volúmenes.\n",
-    "     - Agrupa los datos por trimestre usando `pd.Grouper` con `freq='Q'`.\n",
-    "     - Calcula el promedio de `AveragePrice` y suma `Total Volume` para cada cohorte.\n",
-    "     - Visualiza los resultados en un gráfico de líneas que muestre la evolución de las cohortes.\n",
-    "\n",
-    "2. **Cohortes por Región y Fecha:**\n",
-    "   - **Uso de Datos:** Utiliza las columnas `AveragePrice`, `Total Volume`, `region` y `Date`.\n",
-    "   - **Esperado:** Analiza cómo varían las cohortes de diferentes regiones.\n",
-    "     - Agrupa los datos por `region` y `Date` usando `groupby()`.\n",
-    "     - Calcula el promedio de precios y volumen para cada cohorte.\n",
-    "     - Presenta los resultados en gráficos de barras que muestren comparaciones entre regiones.\n",
-    "\n",
-    "3. **Análisis de Cohortes en Función del Tipo de Bolsa:**\n",
-    "   - **Uso de Datos:** Usa las columnas `Total Bags`, `Small Bags`, `Large Bags`, `XLarge Bags` y `Date`.\n",
-    "   - **Esperado:** Examina cómo se comportan las diferentes cohortes según el tipo de bolsa.\n",
-    "     - Agrupa los datos por tipo de bolsa y `Date`.\n",
-    "     - Calcula el volumen de ventas total y muestra los resultados en un gráfico de líneas.\n",
-    "\n",
-    "4. **Cohortes de Clientes Basadas en Ventas:**\n",
-    "   - **Uso de Datos:** Usa las columnas `Total Volume`, `Date` y `region`.\n",
-    "   - **Esperado:** Analiza el comportamiento de las cohortes según el volumen de ventas.\n",
-    "     - Clasifica los clientes según su volumen de compras.\n",
-    "     - Visualiza las cohortes en gráficos de líneas o barras que muestren el comportamiento de compra a lo largo del tiempo.\n",
-    "\n",
-    "5. **Evaluación de Retención de Ventas por Cohorte:**\n",
-    "   - **Uso de Datos:** Usa las columnas `Total Volume` y `Date`.\n",
-    "   - **Esperado:** Estudia cómo se retienen las ventas en cohortes a lo largo de un año.\n",
-    "     - Agrupa los datos por mes y cohortes.\n",
-    "     - Calcula la retención de ventas y visualiza los resultados en un gráfico de líneas que muestre las tasas de retención.\n",
-    "\n",
-    "\n",
-    "### 5. **Análisis de Correlación y Regresión**\n",
-    "**Resumen:** Se centra en la identificación de relaciones significativas entre las variables numéricas y el desarrollo de modelos de regresión para hacer predicciones basadas en esas relaciones.\n",
-    "\n",
-    "1. **Matriz de Correlación:** \n",
-    "   - **Uso de Datos:** Utiliza las columnas numéricas del DataFrame (p. ej., `AveragePrice`, `Total Volume`, `4046`, `4225`, `4770`, `Total Bags`).\n",
-    "   - **Esperado:** \n",
-    "     - Importa las librerías necesarias: `import seaborn as sns` y `import matplotlib.pyplot as plt`.\n",
-    "     - Calcula la matriz de correlación usando el método `.corr()` del DataFrame.\n",
-    "     - Visualiza la matriz utilizando `sns.heatmap()`. \n",
-    "     - Anota las correlaciones más significativas y discute su posible impacto en el análisis.\n",
-    "\n",
-    "2. **Análisis de Dispersión entre Variables Clave:** \n",
-    "   - **Uso de Datos:** Selecciona variables numéricas de interés como `AveragePrice` y `Total Volume`.\n",
-    "   - **Esperado:** \n",
-    "     - Importa las librerías necesarias: `import seaborn as sns` y `import matplotlib.pyplot as plt`.\n",
-    "     - Crea un gráfico de dispersión con `sns.scatterplot()` para visualizar la relación entre `AveragePrice` y `Total Volume`.\n",
-    "     - Añade una línea de regresión utilizando `sns.regplot()` para ilustrar las tendencias.\n",
-    "     - Compara el ajuste de una regresión lineal frente a una polinómica.\n",
-    "\n",
-    "3. **Predicciones Mensuales Usando Datos Trimestrales:**\n",
-    "   - **Uso de Datos:** Agrupa datos por trimestres y segmenta en meses utilizando `Date`, `AveragePrice`, y `Total Volume`.\n",
-    "   - **Esperado:** \n",
-    "     - Convierte la columna `Date` a tipo datetime si es necesario.\n",
-    "     - Agrupa los datos por trimestre y calcula el promedio de `AveragePrice` y `Total Volume`.\n",
-    "     - Utiliza los datos de los primeros 2 meses de un trimestre para predecir el precio del tercer mes.\n",
-    "     - Compara los resultados de las predicciones con los precios reales.\n",
-    "     - Evalúa la precisión de tus predicciones utilizando métricas como R² y RMSE.\n",
-    "\n",
-    "4. **Predicciones Trimestrales:**\n",
-    "   - **Uso de Datos:** Agrupa los datos en trimestres usando solo variables numéricas.\n",
-    "   - **Esperado:** \n",
-    "     - Agrupa los datos por trimestres usando `pd.Grouper()` con `freq='Q'` para obtener promedios.\n",
-    "     - Usa los datos de 1 o 2 trimestres anteriores para predecir el siguiente trimestre ajustando modelos de regresión lineal y polinómica.\n",
-    "     - Compara los resultados de las predicciones con los precios reales.\n",
-    "     - Evalúa la precisión de tus predicciones utilizando métricas como R² y RMSE.\n",
-    "\n",
-    "5. **Predicciones Anuales:**\n",
-    "   - **Uso de Datos:** Agrupa los datos en años, utilizando únicamente columnas numéricas.\n",
-    "   - **Esperado:** \n",
-    "     - Agrupa los datos por año utilizando `pd.Grouper()` con `freq='Y'`.\n",
-    "     - Usa los datos de 1 o 2 años anteriores para predecir el siguiente año ajustando modelos de regresión lineal y polinómica.\n",
-    "     - Evalúa la precisión de tus predicciones utilizando métricas como R² y RMSE.\n",
-    "\n",
-    "6. **Desarrollo de Modelos de Regresión Múltiple:** \n",
-    "   - **Uso de Datos:** Selecciona varias variables numéricas como `Total Volume`, `4046`, `4225`, `4770`, y `Total Bags` para predecir `AveragePrice`.\n",
-    "   - **Esperado:** \n",
-    "     - Define las variables independientes (X) y dependientes (y).\n",
-    "     - Ajusta modelos de regresión múltiple.\n",
-    "     - Compara su rendimiento utilizando métricas como R² y RMSE y discute las implicaciones de los resultados.\n",
-    "\n",
-    "7. **Análisis de Coeficientes de Regresión Múltiple:**\n",
-    "   - **Uso de Datos:** Examina los coeficientes de los modelos de regresión múltiple ajustados.\n",
-    "   - **Esperado:** \n",
-    "     - Extrae los coeficientes del modelo ajustado.\n",
-    "     - Interpreta los coeficientes para entender el impacto de cada variable numérica en `AveragePrice`.\n",
-    "     - Comenta sobre las variables más significativas y su relevancia.\n",
-    "\n",
-    "8. **Modelos de Regresión para Diferenciar Volúmenes de Ventas:**\n",
-    "   - **Uso de Datos:** Usa `AveragePrice`, `Total Volume`, `4046`, `4225`, y `4770`.\n",
-    "   - **Esperado:** \n",
-    "     - Ajusta modelos de regresión para analizar cómo los diferentes volúmenes de ventas afectan `AveragePrice`.\n",
-    "     - Compara los resultados de regresión lineal y polinómica.\n",
-    "     - Presenta las conclusiones de tus análisis.\n",
-    "\n",
-    "9. **Análisis de la Influencia de las Ventas Totales en el Precio Promedio:**\n",
-    "   - **Uso de Datos:** Usa `Total Volume`, `AveragePrice`, y `Total Bags`.\n",
-    "   - **Esperado:** \n",
-    "     - Ajusta un modelo de regresión lineal y polinómica para ver cómo varía `AveragePrice` en función del volumen total de ventas.\n",
-    "     - Evalúa la significancia de los coeficientes y discute su relevancia.\n",
-    "\n",
-    "10. **Regresión para Predecir el Precio Promedio Según el Volumen de Aguacates por Tipo:**\n",
-    "    - **Uso de Datos:** Usa `AveragePrice`, `4046`, `4225`, `4770`, y `Total Volume`.\n",
-    "    - **Esperado:** \n",
-    "      - Ajusta modelos de regresión lineal y polinómica.\n",
-    "      - Evalúa la efectividad de ambos modelos utilizando métricas como R² y RMSE.\n",
-    "      - Discute cuál modelo ofrece mejores predicciones y por qué, basándote en los resultados obtenidos.\n",
-    "\n",
-    "\n"
+    "     - Presenta un gráfico de dispersión que muestre la relación y discute la tendencia observada utilizando `plt.scatter()` y `plt.plot()`."
    ]
   },
   {
