--- a/3.proyecto_team_apartados.ipynb
+++ b/3.proyecto_team_apartados.ipynb
@@ -30,6 +30,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c49efbb8-299a-4329-b7ba-fff9e3e59f23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Afegir prova"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5741045c-bc39-4980-bb47-98b8f1ed1555",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "3cec4378-7508-4474-9efe-748639e89bc9",
    "metadata": {},
@@ -172,9 +190,7 @@
   {
    "cell_type": "markdown",
    "id": "5df1b9e2",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 2. **Comparación de Elasticidad en Diferentes Mercados:**\n",
     "   - **Uso de Datos:** Utiliza las columnas `Total Volume` y `AveragePrice`.\n",
@@ -358,9 +374,7 @@
   {
    "cell_type": "markdown",
    "id": "67b2cc9c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 4. **Análisis de Elasticidad Comparativa entre Orgánicos y Convencionales:**\n",
     "   - **Uso de Datos:** Usa las columnas `AveragePrice`, `Total Volume` y `type`.\n",
