--- a/3.proyecto_team_apartados.ipynb
+++ b/3.proyecto_team_apartados.ipynb
@@ -30,12 +30,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "c49efbb8-299a-4329-b7ba-fff9e3e59f23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Afegir prova"
+    "# Afegir prova\n",
+    "# Prova 2"
    ]
   },
   {
