--- a/0.DataSet_base.ipynb
+++ b/0.DataSet_base.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "id": "a45d00a7",
    "metadata": {},
    "outputs": [
@@ -443,7 +443,7 @@
       "\n",
       "Años: [2015 2016 2017 2018]\n",
       "\n",
-      "Total volume California:  1028.98165317\n"
+      "Total volume California:  617388991.902\n"
      ]
     },
     {
@@ -549,8 +549,8 @@
     "    regions = df_cp['region'].unique(); print(f\"Regiones comerciales: {regions}\\n\")\n",
     "    years = df_cp['year'].unique(); print(f\"Años: {years}\\n\")\n",
     "\n",
-    "    print(\"Total volume California: \",df_cp_cleaned[df_cp_cleaned.region == 'California']['Total Volume'].sum()/1000000)\n",
-    "    display(df_cp_cleaned.groupby('region')['Total Volume'].sum()/1000000)\n",
+    "    print(\"Total volume California: \",df_cp_cleaned[df_cp_cleaned.region == 'California']['Total Volume'].sum()/10*6)\n",
+    "    display(df_cp_cleaned.groupby('region')['Total Volume'].sum()/10**6)\n",
     "\n",
     "    df_weekly = df_cp.groupby(pd.Grouper(key='Date', freq='W')).count() # ['AveragePrice'].mean()\n",
     "    plt.figure(figsize=(16, 6))\n",
