- Separar codi en un llibreria

--- a/0.DataSet_base.ipynb
+++ b/0.DataSet_base.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a45d00a7",
    "metadata": {},
    "outputs": [
@@ -290,115 +290,7 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "from statsmodels.tsa.seasonal import seasonal_decompose\n",
-    "\n",
-    "mostrar_info = True\n",
-    "\n",
-    "df = pd.read_csv(\"avocado.csv\")\n",
-    "df_cp = df.copy()\n",
-    "df_cp['Date'] = pd.to_datetime(df_cp['Date']) #Normalizar fecha\n",
-    "df_cp = df_cp.rename(columns={df.columns[0]: 'Col_0'}) # Primera columna sin titulo, potencialmente eliminable\n",
-    "df_cp = df_cp.rename(columns={'4046': 'Volume_Hass_S'}) # Etiquetas mas descritivas\n",
-    "df_cp = df_cp.rename(columns={'4225': 'Volume_Hass_L'})\n",
-    "df_cp = df_cp.rename(columns={'4770': 'Volume_Hass_XL'})\n",
-    "\n",
-    "region_classification = {\n",
-    "    'Albany': 'City',\n",
-    "    'Atlanta': 'City',\n",
-    "    'BaltimoreWashington': 'Region',\n",
-    "    'Boise': 'City',\n",
-    "    'Boston': 'City',\n",
-    "    'BuffaloRochester': 'Region',\n",
-    "    'California': 'GreaterRegion',\n",
-    "    'Charlotte': 'City',\n",
-    "    'Chicago': 'City',\n",
-    "    'CincinnatiDayton': 'Region',\n",
-    "    'Columbus': 'City',\n",
-    "    'DallasFtWorth': 'Region',\n",
-    "    'Denver': 'City',\n",
-    "    'Detroit': 'City',\n",
-    "    'GrandRapids': 'City',\n",
-    "    'GreatLakes': 'GreaterRegion',\n",
-    "    'HarrisburgScranton': 'Region',\n",
-    "    'HartfordSpringfield': 'Region',\n",
-    "    'Houston': 'City',\n",
-    "    'Indianapolis': 'City',\n",
-    "    'Jacksonville': 'City',\n",
-    "    'LasVegas': 'City',\n",
-    "    'LosAngeles': 'City',\n",
-    "    'Louisville': 'City',\n",
-    "    'MiamiFtLauderdale': 'Region',\n",
-    "    'Midsouth': 'GreaterRegion',\n",
-    "    'Nashville': 'City',\n",
-    "    'NewOrleansMobile': 'Region',\n",
-    "    'NewYork': 'City',\n",
-    "    'Northeast': 'GreaterRegion',\n",
-    "    'NorthernNewEngland': 'Region',\n",
-    "    'Orlando': 'City',\n",
-    "    'Philadelphia': 'City',\n",
-    "    'PhoenixTucson': 'Region',\n",
-    "    'Pittsburgh': 'City',\n",
-    "    'Plains': 'GreaterRegion',\n",
-    "    'Portland': 'City',\n",
-    "    'RaleighGreensboro': 'Region',\n",
-    "    'RichmondNorfolk': 'Region',\n",
-    "    'Roanoke': 'City',\n",
-    "    'Sacramento': 'City',\n",
-    "    'SanDiego': 'City',\n",
-    "    'SanFrancisco': 'City',\n",
-    "    'Seattle': 'City',\n",
-    "    'SouthCarolina': 'State',\n",
-    "    'SouthCentral': 'GreaterRegion',\n",
-    "    'Southeast': 'GreaterRegion',\n",
-    "    'Spokane': 'City',\n",
-    "    'StLouis': 'City',\n",
-    "    'Syracuse': 'City',\n",
-    "    'Tampa': 'City',\n",
-    "    'TotalUS': 'TotalUS',\n",
-    "    'West': 'GreaterRegion',\n",
-    "    'WestTexNewMexico': 'Region'\n",
-    "}\n",
-    "classification_colors = {'City':'green' ,'Region':'yellow' ,'GreaterRegion':'orange', 'State':'red'}\n",
-    "df_cp['region_class']= df_cp['region'].map(region_classification)\n",
-    "\n",
-    "\n",
-    "get_season = lambda date: '1.Primavera' if 3 <= date.month <= 5 else ('2.Verano' if 6 <= date.month <= 8 else ('3.Otoño' if 9 <= date.month <= 11 else '4.Invierno'))\n",
-    "df_date_price_volume = df_cp[['Date', 'region', 'AveragePrice', 'Total Volume']]\n",
-    "df_date_price_volume = df_date_price_volume.reset_index()\n",
-    "df_date_price_volume['Season'] = df_date_price_volume['Date'].apply(get_season)\n",
-    "# df_date_price_volume\n",
-    "\n",
-    "\n",
-    "if mostrar_info:\n",
-    "    display(df_cp.head())\n",
-    "\n",
-    "    df_type = df_cp.groupby('type')['Total Volume'].count()\n",
-    "    df_type = df_type.reset_index()\n",
-    "    display(df_type)\n",
-    "\n",
-    "    regions = df_cp['region'].unique() \n",
-    "    print(f\"Regiones comerciales: {regions}\\n\")\n",
-    "\n",
-    "    years = df_cp['year'].unique() \n",
-    "    print(f\"Años: {years}\\n\")\n",
-    "\n",
-    "\n",
-    "    df_weekly = df_cp.groupby(pd.Grouper(key='Date', freq='W')).count() # ['AveragePrice'].mean()\n",
-    "\n",
-    "    plt.figure(figsize=(16, 6))\n",
-    "    plt.plot(df_weekly, label ='Etiqueta')\n",
-    "    plt.legend(loc='best')\n",
-    "    plt.xlabel('X')\n",
-    "    plt.ylabel('Y')\n",
-    "    plt.title('Title')\n",
-    "    plt.grid(True)\n",
-    "    plt.xticks(rotation=45)\n",
-    "    plt.show()\n",
-    "    df_weekly"
+    "import df_alvocado as alvocado\n"
    ]
   },
   {
