- Canvis petits a la llibreria i al exemple.

--- a/0.DataSet_base.ipynb
+++ b/0.DataSet_base.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 2,
    "id": "bcb45482",
    "metadata": {},
    "outputs": [
@@ -55,9 +55,13 @@
      "output_type": "stream",
      "text": [
       "Ajuda:\n",
+      "    import avocado_manager as av\n",
       "    av.Init()\n",
       "    av.Init(\"avocado.csv\")\n",
-      "    display(av.df(\"df_cp\")\n",
+      "    av.info()\n",
+      "    av.df(\"df\")\n",
+      "    display(av.df(\"df_cp\"))\n",
+      "    av.add(df,\"df_name\")\n",
       "    \n",
       "Lista de dataframes: ['df', 'df_cp', 'df_type', 'regions', 'years', 'dates', 'df_date_price_volume', 'df_cleaned']\n"
      ]
@@ -455,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 3,
    "id": "3ca78bb6",
    "metadata": {},
    "outputs": [
@@ -475,8 +479,8 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import avocado_manager as av\n",
-    "df_cp = av.Manager.get_df(\"df_cp\")\n",
-    "\n",
+    "av.init()\n",
+    "df_cp = av.df(\"df_cp\")\n",
     "df_count = df_cp.groupby(['Date', 'region']).size().reset_index(name='Total')\n",
     "df_pivot = df_count.pivot(index='Date', columns='region', values='Total').fillna(0)\n",
     "diferencias = df_pivot.apply(lambda x: x.nunique() > 1, axis=0)\n",
@@ -494,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f7945f33",
    "metadata": {},
    "outputs": [
