--- a/0.DataSet_base.ipynb
+++ b/0.DataSet_base.ipynb
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "f7945f33",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
     "av.init()\n",
     "df_cp = av.df(\"df_cp\")\n",
     "\n",
-    "#lstRegions = df['region'].unique()\n",
+    "#lstRegions = df_cp['region'].unique()\n",
     "lstRegions = ['WestTexNewMexico','California','LosAngeles', 'Denver']\n",
     "df_media = df_cp.groupby([pd.Grouper(key='Date', freq='Q'), 'region'])['AveragePrice'].mean().reset_index()\n",
     "\n",
