--- a/Guio_presentacio.ipynb
+++ b/Guio_presentacio.ipynb
@@ -1,11 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "4566b8b5-d2f5-4b22-abbb-9badd101505b",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Autores: ...."
    ]
@@ -37,7 +35,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "009c2556-2f00-45f8-863b-9127d8a39e10",
    "metadata": {},
    "source": [
@@ -220,7 +218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "usr",
    "language": "python",
    "name": "python3"
   },
@@ -234,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
