canvis locals a Guio ara sí

--- a/Guio_presentacio.ipynb
+++ b/Guio_presentacio.ipynb
@@ -27,18 +27,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "817d6582-bbe6-4043-96a4-36e1191cee31",
+   "cell_type": "raw",
+   "id": "757ab45f-5347-489e-a328-3ea7475cbafe",
    "metadata": {},
    "source": [
-    "Clasificación de región en Regiones y Ciudades\n",
-    "Explorar datos fechas, nulos, columnas innecesarias\n",
-    "Discusión sobre qué hacer con los datos de semanas que faltan (interpolante)"
+    "Clasificación de región en Regiones y Ciudades.\n",
+    "Explorar datos fechas, nulos, columnas innecesarias.\n",
+    "Discusión sobre qué hacer con los datos de semanas que faltan (interpolante)."
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "009c2556-2f00-45f8-863b-9127d8a39e10",
+   "cell_type": "markdown",
+   "id": "fe7370a1-4d10-4efb-bf68-10c1c9092807",
    "metadata": {},
    "source": [
     "#### Visión global de datos"
@@ -83,6 +83,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6d751ef-4246-4b9b-a3d7-cd5875cd7cea",
+   "metadata": {},
+   "source": [
+    "#### Elasticidad"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "edaa99db-948c-4549-8772-acb13b6a62a1",
    "metadata": {},
    "source": [
@@ -95,14 +103,6 @@
    "metadata": {},
    "source": [
     "#### Correlacion de volum total de les ciutats amb volum total US"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6d751ef-4246-4b9b-a3d7-cd5875cd7cea",
-   "metadata": {},
-   "source": [
-    "#### Elasticidad"
    ]
   },
   {
@@ -147,18 +147,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0578f063-30cd-46da-b352-89f2c68369d1",
+   "id": "4bace443-8ddb-46a7-8af6-ad1224d709bc",
    "metadata": {},
    "source": [
-    "#### Creación de modelo predictivo de ventas por MES usando los datos de años anteriores ( lineal y polinomica ) Calculo R2"
+    "#### Creación de modelo predictivo de ventas por MES usando los datos de años anteriores ( lineal y polinomica ) usando Total US. Calculo R2\n",
+    "##### Aplicación del modelo a los datos de una región\n",
+    "##### Aplicación del modelo a los datos de una ciudad"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "84bdee54-da39-4fe6-b1f1-ac4bf2e79ee2",
+   "id": "6a398acd-fd6a-425a-970b-9c092f6bb581",
    "metadata": {},
    "source": [
     "#### Creación de modelo predictivo de ventas por TRIMESTRE usando los datos de años anteriores ( lineal y polinomica ) Calculo R2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a59b2fee-7725-4c09-944b-08fde59148bb",
+   "metadata": {},
+   "source": [
+    "##### Idem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dc3b0bb-2e75-442d-bf52-99bc2a2f772a",
+   "metadata": {},
+   "source": [
+    "##### Idem."
    ]
   },
   {
