--- a/0.DataSet_base.ipynb
+++ b/0.DataSet_base.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bcb45482",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
       "    display(av.df(\"df_cp\"))\n",
       "    av.add(df,\"df_name\")\n",
       "    \n",
-      "Lista de dataframes: ['df', 'df_cp', 'df_type', 'regions', 'years', 'dates', 'df_date_price_volume', 'df_cp_cleaned', 'df_city', 'df_region', 'df_city_region', 'df_greater', 'df_totalUS', 'region_largest']\n"
+      "Lista de dataframes: ['df', 'df_cp', 'df_type', 'regions', 'years', 'dates', 'df_date_price_volume', 'df_cp_cleaned', 'df_city', 'df_region', 'df_city_region', 'df_greater', 'df_totalUS', 'region_largest', 'df_cleaned']\n"
      ]
     },
     {
@@ -607,6 +607,303 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 18249 entries, 0 to 18248\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   Date          18249 non-null  datetime64[ns]\n",
+      " 1   AveragePrice  18249 non-null  float64       \n",
+      " 2   Total Volume  18249 non-null  float64       \n",
+      " 3   4046          18249 non-null  float64       \n",
+      " 4   4225          18249 non-null  float64       \n",
+      " 5   4770          18249 non-null  float64       \n",
+      " 6   Total Bags    18249 non-null  float64       \n",
+      " 7   Small Bags    18249 non-null  float64       \n",
+      " 8   Large Bags    18249 non-null  float64       \n",
+      " 9   XLarge Bags   18249 non-null  float64       \n",
+      " 10  type          18249 non-null  object        \n",
+      " 11  year          18249 non-null  int64         \n",
+      " 12  region        18249 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(9), int64(1), object(2)\n",
+      "memory usage: 1.8+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>AveragePrice</th>\n",
+       "      <th>Total Volume</th>\n",
+       "      <th>4046</th>\n",
+       "      <th>4225</th>\n",
+       "      <th>4770</th>\n",
+       "      <th>Total Bags</th>\n",
+       "      <th>Small Bags</th>\n",
+       "      <th>Large Bags</th>\n",
+       "      <th>XLarge Bags</th>\n",
+       "      <th>type</th>\n",
+       "      <th>year</th>\n",
+       "      <th>region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-03-25</td>\n",
+       "      <td>1.57</td>\n",
+       "      <td>149396.50</td>\n",
+       "      <td>16361.69</td>\n",
+       "      <td>109045.03</td>\n",
+       "      <td>65.45</td>\n",
+       "      <td>23924.33</td>\n",
+       "      <td>19273.80</td>\n",
+       "      <td>4270.53</td>\n",
+       "      <td>380.00</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Albany</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-03-25</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>624645.42</td>\n",
+       "      <td>281209.40</td>\n",
+       "      <td>33187.58</td>\n",
+       "      <td>1831.33</td>\n",
+       "      <td>308417.11</td>\n",
+       "      <td>227944.75</td>\n",
+       "      <td>77406.46</td>\n",
+       "      <td>3065.90</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Atlanta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-03-25</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>986038.75</td>\n",
+       "      <td>108250.52</td>\n",
+       "      <td>591934.75</td>\n",
+       "      <td>4205.03</td>\n",
+       "      <td>281648.45</td>\n",
+       "      <td>277508.08</td>\n",
+       "      <td>2777.04</td>\n",
+       "      <td>1363.33</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>BaltimoreWashington</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-03-25</td>\n",
+       "      <td>1.28</td>\n",
+       "      <td>85839.98</td>\n",
+       "      <td>40361.51</td>\n",
+       "      <td>2026.94</td>\n",
+       "      <td>9200.23</td>\n",
+       "      <td>34251.30</td>\n",
+       "      <td>24809.18</td>\n",
+       "      <td>9434.29</td>\n",
+       "      <td>7.83</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Boise</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-03-25</td>\n",
+       "      <td>1.39</td>\n",
+       "      <td>641462.43</td>\n",
+       "      <td>26019.52</td>\n",
+       "      <td>479186.12</td>\n",
+       "      <td>1883.17</td>\n",
+       "      <td>134373.62</td>\n",
+       "      <td>109938.39</td>\n",
+       "      <td>22955.23</td>\n",
+       "      <td>1480.00</td>\n",
+       "      <td>conventional</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>Boston</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18244</th>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>1.72</td>\n",
+       "      <td>593.39</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>102.71</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>490.68</td>\n",
+       "      <td>490.68</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>organic</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Syracuse</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18245</th>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>1885.48</td>\n",
+       "      <td>748.62</td>\n",
+       "      <td>30.19</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1106.67</td>\n",
+       "      <td>1106.67</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>organic</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Tampa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18246</th>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>612910.15</td>\n",
+       "      <td>233286.13</td>\n",
+       "      <td>216611.20</td>\n",
+       "      <td>4370.99</td>\n",
+       "      <td>158641.83</td>\n",
+       "      <td>115068.71</td>\n",
+       "      <td>43573.12</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>organic</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>TotalUS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18247</th>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>1.40</td>\n",
+       "      <td>187548.30</td>\n",
+       "      <td>70313.71</td>\n",
+       "      <td>72942.11</td>\n",
+       "      <td>24.30</td>\n",
+       "      <td>44268.18</td>\n",
+       "      <td>10023.72</td>\n",
+       "      <td>34244.46</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>organic</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18248</th>\n",
+       "      <td>2015-01-04</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>6182.81</td>\n",
+       "      <td>1561.30</td>\n",
+       "      <td>2958.17</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1663.34</td>\n",
+       "      <td>1663.34</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>organic</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>WestTexNewMexico</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>18249 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  AveragePrice  Total Volume       4046       4225     4770  \\\n",
+       "0     2018-03-25          1.57     149396.50   16361.69  109045.03    65.45   \n",
+       "1     2018-03-25          1.04     624645.42  281209.40   33187.58  1831.33   \n",
+       "2     2018-03-25          1.23     986038.75  108250.52  591934.75  4205.03   \n",
+       "3     2018-03-25          1.28      85839.98   40361.51    2026.94  9200.23   \n",
+       "4     2018-03-25          1.39     641462.43   26019.52  479186.12  1883.17   \n",
+       "...          ...           ...           ...        ...        ...      ...   \n",
+       "18244 2015-01-04          1.72        593.39       0.00     102.71     0.00   \n",
+       "18245 2015-01-04          1.70       1885.48     748.62      30.19     0.00   \n",
+       "18246 2015-01-04          1.46     612910.15  233286.13  216611.20  4370.99   \n",
+       "18247 2015-01-04          1.40     187548.30   70313.71   72942.11    24.30   \n",
+       "18248 2015-01-04          1.64       6182.81    1561.30    2958.17     0.00   \n",
+       "\n",
+       "       Total Bags  Small Bags  Large Bags  XLarge Bags          type  year  \\\n",
+       "0        23924.33    19273.80     4270.53       380.00  conventional  2018   \n",
+       "1       308417.11   227944.75    77406.46      3065.90  conventional  2018   \n",
+       "2       281648.45   277508.08     2777.04      1363.33  conventional  2018   \n",
+       "3        34251.30    24809.18     9434.29         7.83  conventional  2018   \n",
+       "4       134373.62   109938.39    22955.23      1480.00  conventional  2018   \n",
+       "...           ...         ...         ...          ...           ...   ...   \n",
+       "18244      490.68      490.68        0.00         0.00       organic  2015   \n",
+       "18245     1106.67     1106.67        0.00         0.00       organic  2015   \n",
+       "18246   158641.83   115068.71    43573.12         0.00       organic  2015   \n",
+       "18247    44268.18    10023.72    34244.46         0.00       organic  2015   \n",
+       "18248     1663.34     1663.34        0.00         0.00       organic  2015   \n",
+       "\n",
+       "                    region  \n",
+       "0                   Albany  \n",
+       "1                  Atlanta  \n",
+       "2      BaltimoreWashington  \n",
+       "3                    Boise  \n",
+       "4                   Boston  \n",
+       "...                    ...  \n",
+       "18244             Syracuse  \n",
+       "18245                Tampa  \n",
+       "18246              TotalUS  \n",
+       "18247                 West  \n",
+       "18248     WestTexNewMexico  \n",
+       "\n",
+       "[18249 rows x 13 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25]\n"
+     ]
     }
    ],
    "source": [
@@ -624,7 +921,12 @@
     "df_cp_cleaned['Suma Volums'] = df_cp_cleaned['Volume_Hass_S' ]+ df_cp_cleaned['Volume_Hass_L']+ df_cp_cleaned['Volume_Hass_XL' ]\n",
     "df_cp_cleaned['%Variacio'] = (df_cp_cleaned['Total Volume'] - df_cp_cleaned['Suma Volums'])*100/df_cp_cleaned['Total Volume']\n",
     "av.add(df_cp_cleaned,'df_cleaned')\n",
-    "display(av.df(\"df_cleaned\"))"
+    "display(av.df(\"df_cleaned\"))\n",
+    "\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "cuadrados = av.get_map_list(lambda x: x**2, numbers)\n",
+    "print(cuadrados) \n",
+    "\n"
    ]
   },
   {
