--- a/5.proyecto_team_apartados.ipynb
+++ b/5.proyecto_team_apartados.ipynb
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 120,
    "id": "4ed7a30e",
    "metadata": {},
    "outputs": [
@@ -1104,6 +1104,19 @@
       "\n",
       "Valor R² del modelo: 0.937361\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IntegerArray>\n",
+       "[45, 11, 28, 43, 13, 35, 17,  1, 32,  9, 33, 24, 34, 21, 19, 37, 44, 46, 10,\n",
+       " 22, 30, 47, 42, 12, 52,  6,  7, 29, 15, 36,  8, 31,  4, 27, 14, 39,  5,  2,\n",
+       " 50, 41, 23, 20, 49, 38, 18, 40, 25, 26,  3, 53, 16, 48, 51]\n",
+       "Length: 53, dtype: UInt32"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -1188,9 +1201,21 @@
     "print(f\"\\nValor R² del modelo: {r2:.6f}\")\n",
     "\n",
     "\n",
+    "\n",
+    "#############################################################################################################\n",
+    "# Plotting\n",
+    "\n",
     "X_to_plot = X_train[X_train['type_Bool']==0]\n",
+    "# X_to_plot['n_week'] = X_to_plot['n_week'].clip(upper=15)  # np.where(X_to_plot['n_week']>52,  X_to_plot['n_week'], 52 )\n",
+    "# X_to_plot['n_week'][X_to_plot['n_week'] >= 52] = 52\n",
+    "display(pd.unique(X_to_plot['n_week']))\n",
+    "# display(pd.unique(X_to_plot[['year', 'n_week']]))\n",
+    "# X_to_plot['Date'] = X_to_plot.apply(lambda x: pd.to_datetime(f\"{int(x['year'])}-M{(int(x['n_week']//4 +1))}\", format=\"%Y-M%m\"), axis=1)\n",
+    "\n",
     "y_pred_plot = y_pred_poly_train[X_train['type_Bool']==0]\n",
     "Y_to_plot = y_train[X_train['type_Bool']==0]\n",
+    "\n",
+    "\n",
     "\n",
     "plt.scatter(x = X_to_plot['n_week'], y= y_pred_plot, color= 'yellow')\n",
     "plt.scatter(x = X_to_plot['n_week'], y= Y_to_plot, color= 'blue')\n",
