--- a/5.proyecto_team_apartados.ipynb
+++ b/5.proyecto_team_apartados.ipynb
@@ -1074,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 50,
    "id": "4ed7a30e",
    "metadata": {},
    "outputs": [
@@ -1102,21 +1102,10 @@
       "El coeficiente n_week\t \t: -286202.7312073089\n",
       "El coeficiente type_Bool\t \t: -17315.65294883013\n",
       "\n",
-      "Valor R² del modelo: 0.937361\n"
+      "Valor R² del modelo: 0.937361\n",
+      "\n",
+      "La diferencia entre los Valores R² del modelo: 0.021518\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<IntegerArray>\n",
-       "[45, 11, 28, 43, 13, 35, 17,  1, 32,  9, 33, 24, 34, 21, 19, 37, 44, 46, 10,\n",
-       " 22, 30, 47, 42, 12, 52,  6,  7, 29, 15, 36,  8, 31,  4, 27, 14, 39,  5,  2,\n",
-       " 50, 41, 23, 20, 49, 38, 18, 40, 25, 26,  3, 53, 16, 48, 51]\n",
-       "Length: 53, dtype: UInt32"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     },
     {
      "data": {
@@ -1154,10 +1143,10 @@
     "\n",
     "# display(df_local)\n",
     "\n",
-    "Variables = ['Standard Volume', 'year','n_week', 'type_Bool'] #,, 'n_Quarter''Standard Bags' 'ST_Volume_Hass_S', 'ST_Volume_Hass_L', 'ST_Volume_Hass_XL'\n",
+    "Variables = ['Standard Volume', 'year','n_week', 'type_Bool'] #,,,  , 'ST_Volume_Hass_XL',  'ST_Volume_Hass_S', 'ST_Volume_Hass_L' , 'Standard Bags', 'n_Quarter'\n",
     "# group_fit = df_fit.groupby('Quarter').agg({'AveragePrice':'mean', 'Total Volume':'mean' }).reset_index()\n",
     "X= df_local[Variables]\n",
-    "Y= df_local['AveragePrice']#.to_frame()\n",
+    "Y= df_local['AveragePrice']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=42)\n",
     "\n",
@@ -1197,8 +1186,11 @@
     "    print(f'El coeficiente {Variables[i]}\\t \\t: {poly_model.coef_[i]}')\n",
     "\n",
     "# Calcular el valor R²\n",
-    "r2 = r2_score(y_test, y_pred_poly_test)\n",
-    "print(f\"\\nValor R² del modelo: {r2:.6f}\")\n",
+    "r2_test = r2_score(y_test, y_pred_poly_test)\n",
+    "r2_train = r2_score(y_train, y_pred_poly_train)\n",
+    "\n",
+    "print(f\"\\nValor R² del modelo: {r2_test:.6f}\")\n",
+    "print(f\"\\nLa diferencia entre los Valores R² del modelo: {r2_train- r2_test:.6f}\")\n",
     "\n",
     "\n",
     "\n",
@@ -1208,7 +1200,7 @@
     "X_to_plot = X_train[X_train['type_Bool']==0]\n",
     "# X_to_plot['n_week'] = X_to_plot['n_week'].clip(upper=15)  # np.where(X_to_plot['n_week']>52,  X_to_plot['n_week'], 52 )\n",
     "# X_to_plot['n_week'][X_to_plot['n_week'] >= 52] = 52\n",
-    "display(pd.unique(X_to_plot['n_week']))\n",
+    "# display(pd.unique(X_to_plot['n_week']))\n",
     "# display(pd.unique(X_to_plot[['year', 'n_week']]))\n",
     "# X_to_plot['Date'] = X_to_plot.apply(lambda x: pd.to_datetime(f\"{int(x['year'])}-M{(int(x['n_week']//4 +1))}\", format=\"%Y-M%m\"), axis=1)\n",
     "\n",
@@ -1237,9 +1229,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2c5efd36-a46d-4492-85d6-fb8ff3113eff",
+   "metadata": {},
+   "source": [
+    "# TO-DO\n",
+    "\n",
+    "Arreglar el problema de visualización correctamente, conseguir convertir year + #week into a datetime.\n",
+    "Crear el modelo base en el tiempo, para que entrene de manera aleatoria con la mayor parte de los datos (Mostreo correcto), testee en una pequeña parte y tratar de predecir futuros valores. Greater Region.\n",
+    "Idealmente hacer un sistema que pueda entrenar multiples modelos y devuelva una matriz con los mejores modelos a comparar, escogiendo cada vez un conjunto de datos diferentes que se mantienen ocultos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebdd909e",
+   "id": "54ce200b-62d8-45d1-ae10-1cbc358391e0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1249,6 +1253,7 @@
    "id": "2ad8ddb6",
    "metadata": {},
    "source": [
+    "\n",
     "10. **Regresión para Predecir el Precio Promedio Según el Volumen de Aguacates por Tipo:**\n",
     "    - **Uso de Datos:** Usa `AveragePrice`, `4046`, `4225`, `4770`, y `Total Volume`.\n",
     "    - **Esperado:** \n",
